# mail_pulse

./: .coveragerc  .env.sample  .gitignore  README.md  TASKS.md  manage.py  pyproject.toml  requirements.txt
mail_pulse/: asgi.py  settings.py  urls.py  views.py  wsgi.py
mailings/: admin.py  constants.py  forms.py  managers.py  models.py  urls.py  views.py
mailings/management/commands/: populate_db.py  send_mailing.py  setup_managers_group.py
mailings/migrations/: 0001_initial.py  0002_alter_mailing_recipients_alter_mailing_status.py
static/favicons/: site.webmanifest
templates/: base.html  home.html
templates/includes/: footer.html  navbar.html  pagination.html
templates/mailings/: mailing_attempt_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_disable_confirm.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html
templates/users/: block_user_confirm.html  email_verification_sent.html  email_verified.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_email.txt  profile_detail.html  profile_edit.html  register.html
tests/mailings/: conftest.py  test_forms.py  test_integration.py  test_models.py  test_views.py
tests/users/: test_integration.py  test_models.py  test_views.py
users/: admin.py  constants.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_country_alter_user_is_active_and_more.py  0003_emailverificationtoken.py  0004_user_is_blocked_alter_user_avatar.py
utils/: __init__.py  users.py
